--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,7 @@ pytest = "^5.0"
 black = {version = "^18.3-alpha.0",allows-prereleases = true}
 isort = "^4.3"
 flake8 = "^3.7"
-
-[tool.isort]
-line_length=120
-multi_line_output=3
+flake8-isort = "^2.7"
 
 [tool.black]
 line-length = 120
