--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ python = "^3.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.0"
-black = {version = "^18.3-alpha.0",allows-prereleases = true}
 isort = "^4.3"
 flake8 = "^3.7"
 flake8-isort = "^2.7"
+black = "^19.10b0"
 
 [tool.black]
 line-length = 120
